	argument is not CONSTANT_PATHNAME_ENCODING
	* spvw.d (argv_encoding_pathname): do not define when
	CONSTANT_PATHNAME_ENCODING is defined
	(parse_options): do not accept -Epathname
	* makemake.in (encflags) [TSYSOS=darwin]: do not add -Epathname
	Thanks to Carlos Ungil <carlos.ungil@gmail.com> for testing.

2011-04-10  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (wait, waitpid): restore (revert
	the 2011-03-23 patch); recommend POSIX:WITH-SUBPROCESSES in comments

2011-04-09  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:SERVICE): fix non-missing
	protocol handling (bug#3280915)

2011-04-08  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_sigpipe.d [MULTITHREAD, UNIX_MACOSX, GENERATIONAL_GC]:
	patch for strange SIGPIPE delivered to libsigsegv thread

2011-04-06  Sam Steingold  <sds@gnu.org>

	fix bug#3182597: WRITE-BYTE-SEQUENCE :no-hang t is only for byte vectors
	* sequence.d (WRITE-BYTE-SEQUENCE): implement "persev !=
	persev_full" for sequences other than (VECTOR (UNSIGNED-BYTE 8))

2011-04-06  Sam Steingold  <sds@gnu.org>

	* sequence.d (interactive_no_hang): new function
	(READ-BYTE-SEQUENCE, WRITE-BYTE-SEQUENCE): use it

2011-04-06  Sam Steingold  <sds@gnu.org>

	* unixaux.d (fd_read): revert the 2008-12-30 patch which closed
	the fd on ECONNRESET without marking the lisp stream as closed,
	thus leading to EBADF when the stream was closed

2011-04-05  Bruno Haible  <bruno@clisp.org>

	Tweak last two changes.
	* lispbibl.d (GENERATIONAL_GC): Add more comments.
	* spvw.d (SIGSEGV_FAULT_ADDRESS_ALIGNMENT): Define fallback.
	* spvw_fault.d (handle_fault): Simplify use of
	SIGSEGV_FAULT_ADDRESS_ALIGNMENT.

2011-04-04  Sam Steingold  <sds@gnu.org>

	* spvw_fault.d (handle_fault): fix last patch to restore support
	to libsigsegv-2.9 and earlier
	* lispbibl.d (GENERATIONAL_GC): ditto

2011-04-03  Bruno Haible  <bruno@clisp.org>

	Support for generational GC on Linux/S390.
	* configure (SIGSEGV): Recommend libsigsegv-2.10.